fix owned actors overflow when hud is in middle

--- a/styles/persistent/_main.scss
+++ b/styles/persistent/_main.scss
@@ -22,6 +22,7 @@
     display: grid;
     gap: var(--panel-gap);
     scale: revert;
+    width: min-content;
 
     grid-template-columns:
         [full-start menu-start] var(--columns-icon)
